# ras-stac

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  build_and_run.sh  docker-compose.yml  docker-test.sh  example.env  make_model_items.py  model_items_utils.py  new_catalog.py  populate-sample-data.sh  pyproject.toml  requirements.txt  update_catalog.py
.github/workflows/: continuous-integration.yml  ecr-push.yml  papi-sync.yml
process-api/examples/: get-job.py  headers.py  submit-job.py  upsert-process.py
process-api/processes/: ras-dg-to-stac.json  ras-dg-to-stac.yml  ras-geom-to-stac.json  ras-geom-to-stac.yml  ras-plan-to-stac.json  ras-plan-to-stac.yml
ras-stac/: gpkg_to_stac_item.py  ras_geom_hdf.py  ras_plan_dg.py  ras_plan_hdf.py
ras-stac/example-inputs/: green-plan.json
ras-stac/plugins/: new_ras_dg.py  new_ras_geom.py  new_ras_plan.py
ras-stac/utils/: common.py  dg_utils.py  gpkg_utils.py  ras_hdf.py  ras_stac.py  s3_utils.py
ras_stac/: make_hms_item.py  ras_geom_hdf.py  ras_plan_dg.py  ras_plan_hdf.py
ras_stac/example-inputs/: green-depth-grid.json  green-geometry.json  green-plan.json
ras_stac/ras1d/: converter.py
ras_stac/ras1d/utils/: classes.py  common.py  ras_utils.py  s3_utils.py  stac_utils.py
ras_stac/ras_stac1d/: converter.py
ras_stac/ras_stac1d/utils/: classes.py  ras_utils.py  stac_utils.py
ras_stac/utils/: common.py  data_model.py  dg_utils.py  logger.py  ras_hdf.py  ras_stac.py  ras_utils.py  s3_utils.py
tests/: test_ras_geom.py  test_ras_plan.py  test_s3.py  test_utils.py
(+6 files in other folders)
